# CPForge

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PRIVACY.md  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  commit-msg.txt  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  turbo.json  vitest.config.ts
.github/: GOOD_FIRST_ISSUES.md
.github/workflows/: ci.yml  pages.yml  (+2 more)
crates/cpforge-cli/: Cargo.toml
crates/cpforge-cli/src/: main.rs
datasets/: companies.json  company-patterns.json  cp-levels.json  dsa-levels.json  feed-manifest.json  language-templates.json  leetcode-problemset-cache.json  mistake-categories.json  patterns.json  problem-schema.json  roadmap-graph.json  topics.json
docs/: ai-optional-mode.md  api-design.md  architecture.md  cli-design.md  contributing-roadmap.md  contribution-guide.md  dashboard-design.md  demo.md  ecosystem.md  extension-design.md  hall-of-fame.md  launch-plan.md  local-first-design.md  problem-feeds.md  repo-growth-plan.md  roadmap-philosophy.md  screenshots.md  vscode-design.md
e2e/: build-artifacts.spec.ts  dashboard-features.spec.ts  dashboard.spec.ts
packs/: amazon-45.json  blind-75.json  cf-specialist.json  neetcode-150.json
scripts/: fetch-cf-problemset.mjs  fetch-leetcode-problemset.mjs  generate-all-sheets.mjs  generate-cf-search-index.mjs  generate-company-sheets.mjs  generate-leetcode-search-index.mjs  generate-sample-dashboard.mjs  install.ps1  install.sh  refresh-problem-feeds.mjs  sync-problem-bank.mjs  terminal-demo.sh
(+123 files in other folders)
