[workspace]
members = [
    "crates/cpforge-checker",
    "crates/cpforge-cli",
    "crates/cpforge-core",
    "crates/cpforge-runner",
    "crates/cpforge-shrink",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["CPForge contributors"]

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.14"
toml = "0.8"

