[package]
name = "cpforge-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "cpforge"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
cpforge-checker = { path = "../cpforge-checker" }
cpforge-core = { path = "../cpforge-core" }
cpforge-runner = { path = "../cpforge-runner" }
cpforge-shrink = { path = "../cpforge-shrink" }
serde.workspace = true
toml.workspace = true

